修复from ... import ... 时, 直接导入__init__.py文件的全部模块导致的各种问题

--- a/blazorantd/Pages/Welcome.razor
+++ b/blazorantd/Pages/Welcome.razor
@@ -39,3 +39,13 @@
         .
     </p>
 </PageContainer>
+
+@inject NavigationManager navv
+
+@code {
+    
+    protected override void OnInitialized() {
+        navv.NavigateTo("/table/spiders");
+    }
+
+}
