--- a/blazorantd/Layouts/BasicLayout.razor
+++ b/blazorantd/Layouts/BasicLayout.razor
@@ -2,7 +2,8 @@
 @inherits LayoutComponentBase
 
 <AntDesign.ProLayout.BasicLayout 
-    Logo="@("https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg")"
+    Logo="@("https://static.wildto.com/image/erp/header_common_images/MaskGroupx4.png")"
+    Title="Santic"
     MenuData="_menuData">
     <RightContentRender>
         <blazorantd.Components.RightContent />
@@ -11,7 +12,7 @@
         @Body
     </ChildContent>
     <FooterRender>
-        <FooterView Copyright="2021 Ant Design Blazor" Links="Links"></FooterView>
+        <FooterView Copyright="2021 santic" Links="Links"></FooterView>
     </FooterRender>
 </AntDesign.ProLayout.BasicLayout>
 <SettingDrawer />
@@ -20,18 +21,25 @@
 {
     private readonly MenuDataItem[] _menuData =
     {
-        new MenuDataItem
+        @* new MenuDataItem
         {
             Path = "/",
             Name = "welcome",
             Key = "welcome",
             Icon = "smile",
+        } *@
+        new MenuDataItem
+        {
+            Path = "/table/spiders",
+            Name = "爬虫列表",
+            Key = "table.spiders",
+            Icon = "unordered-list"
         }
     };
 
     public LinkItem[] Links { get; set; } =
     {
-        new LinkItem
+        @* new LinkItem
         {
             Key = "Ant Design Blazor",
             Title = "Ant Design Blazor",
@@ -44,12 +52,12 @@
             Title = (RenderFragment)(@<Icon Type="github" />),
             Href = "https://github.com/ant-design-blazor/ant-design-pro-blazor",
             BlankTarget = true,
-        },
+        }, *@
         new LinkItem
         {
-            Key = "Blazor",
-            Title = "Blazor",
-            Href = "https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor?WT.mc_id=DT-MVP-5003987",
+            Key = "santic",
+            Title = "santic.com",
+            Href = "https://santic.com/",
             BlankTarget = true,
         }
     };
